Button für Spiel beenden hinzugefügt

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -529,6 +529,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <Button
+            android:id="@+id/btnEndGame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Spiel beenden"
+            android:visibility="visible"
+            android:layout_margin="16dp"
+            />
 
     </LinearLayout>
 
