--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -27,7 +27,9 @@
         android:id="@+id/usernameEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:hint="@string/username"
+        android:inputType="textPersonName"
         android:padding="12dp"
         android:textColor="@android:color/black"
         android:textColorHint="@android:color/darker_gray"
