--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -524,7 +524,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:background="@drawable/button_yellow_with_border"
-            android:text="Häuser anzeigen"
+            android:text="@string/h_user_anzeigen"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -562,6 +562,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:background="@drawable/dice_border"
+                android:contentDescription="@string/dice_symbol"
                 android:src="@drawable/view_1" />
 
             <ImageView
@@ -569,6 +570,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:background="@drawable/dice_border"
+                android:contentDescription="@string/dice_symbol_2"
                 android:src="@drawable/view_1" />
         </LinearLayout>
 
